# fft

./: CMakeLists.txt
src/: main.c
src/include/: my_socket.h
src/my_socket/: my_socket.c
visualization/: main.py
